--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "firebase": "^8.4.3",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0"
