--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-<<<<<<< HEADskype
     "firebase": "^8.4.3",
     "vue": "^2.6.12",
-=======
-    "vue": "^2.6.11",
->>>>>>> parent of aa1f27c (instalação do bootstrap)
     "vue-axios": "^3.2.4",
+    "vue-icon": "^2.2.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
